--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,29 +3,8 @@
 @tailwind utilities;
 
 body {
-    /* background-color: #0f172a; */
-    background-image: url('/background_lines.png');
-    /* background-size:600px; */
-    /* background-size:cover; */
-    background-position: center;
-    background-repeat: repeat;
+    background-color: #151515;
     min-height: 100vh;
 }
 
-.signup {
-    background-image: url('/background_lines.png');
-    background-size: 600px;
-    /* background-size:cover; */
-    background-position: center;
-    background-repeat: repeat;
-    min-height: 100vh;
-}
-
-.login {
-    background-image: url('/background_lines.png');
-    background-size: 600px;
-    /* background-size:cover; */
-    background-position: center;
-    background-repeat: repeat;
-    min-height: 100vh;
-}
+ 
